# gitdude

./: .env.example  LICENSE  README.md  pyproject.toml
gitdude/: __init__.py  ai.py  config.py  git_ops.py  main.py  utils.py
gitwise/: __init__.py  ai.py  config.py  git_ops.py  main.py
